k8s.yml
---
apiVersion: v1
kind: Service
metadata:
    name: app
spec:
    type: LoadBalancer
    selector:
        app: app
    ports:
        -   name: http
            protocol: TCP
            port: 80
            targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
spec:
    selector:
        matchLabels:
            app: app
    replicas: 3
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: app
        spec:
            containers:
                -   image: edmitry/nginx
                    name: nginx
                    ports:
                        -   containerPort: 80
                    volumeMounts:
                        -   name: socks
                            mountPath: /socks
                -   image: edmitry/php-fpm
                    name: app
                    volumeMounts:
                        -   name: socks
                            mountPath: /socks
                    readinessProbe:
                        httpGet:
                            path: /
                            port: 80
                        failureThreshold: 3
                        periodSeconds: 10
                        successThreshold: 1
                        timeoutSeconds: 1
                    livenessProbe:
                        httpGet:
                            path: /
                            port: 80
                        failureThreshold: 3
                        periodSeconds: 10
                        successThreshold: 1
                        timeoutSeconds: 1
                        initialDelaySeconds: 10
            volumes:
                -   name: socks
                    emptyDir: {}
